--- a/tests/test.ipynb
+++ b/tests/test.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -64,21 +64,10 @@
     }
    ],
    "source": [
-    "fig = plt.figure(figsize=(6,6))\n",
-    "ax = fig.add_subplot()\n",
-    "\n",
-    "dims = [-2,2]\n",
-    "ax.set_xlim(dims)\n",
-    "ax.set_ylim(dims)\n",
-    "ax.set_xlabel('X')\n",
-    "ax.set_ylabel('Y')\n",
-    "ax.grid(True)\n",
-    "ax.set_xticks(np.arange(min(dims), max(dims)+1, 1.0))\n",
-    "ax.set_yticks(np.arange(min(dims), max(dims)+1, 1.0))\n",
-    "\n",
     "R = SO2(45, unit='deg')\n",
     "print(R)\n",
     "\n",
+    "new_plot2d()\n",
     "plot_rot2d(R, frame='R')\n"
    ]
   },
@@ -92,15 +81,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   0.7071   -0.7071    \n",
-      "   0.7071    0.7071    \n",
+      "   1         0         0         \n",
+      "   0         1         0         \n",
+      "   0         0         1         \n",
       "\n"
      ]
     },
@@ -116,21 +106,10 @@
     }
    ],
    "source": [
-    "fig = plt.figure(figsize=(6,6))\n",
-    "ax = fig.add_subplot()\n",
-    "\n",
-    "dims = [-2,2]\n",
-    "ax.set_xlim(dims)\n",
-    "ax.set_ylim(dims)\n",
-    "ax.set_xlabel('X')\n",
-    "ax.set_ylabel('Y')\n",
-    "ax.grid(True)\n",
-    "ax.set_xticks(np.arange(min(dims), max(dims)+1, 1.0))\n",
-    "ax.set_yticks(np.arange(min(dims), max(dims)+1, 1.0))\n",
-    "\n",
     "T = SE2([0,0], unit='deg')\n",
     "print(T)\n",
     "\n",
+    "new_plot2d()\n",
     "plot_pose2d(T, frame='T')\n"
    ]
   },
@@ -152,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -177,25 +156,10 @@
     }
    ],
    "source": [
-    "fig = plt.figure(figsize=(6,6))\n",
-    "ax = fig.add_subplot(111, projection='3d')\n",
-    "\n",
-    "dims = [-2,2]\n",
-    "ax.set_proj_type('ortho')\n",
-    "ax.set_xlim(dims)\n",
-    "ax.set_ylim(dims)\n",
-    "ax.set_zlim(dims)\n",
-    "ax.set_xlabel('X')\n",
-    "ax.set_ylabel('Y')\n",
-    "ax.set_zlabel('Z')\n",
-    "ax.grid(True)\n",
-    "ax.set_xticks(np.arange(min(dims), max(dims)+1, 1.0))\n",
-    "ax.set_yticks(np.arange(min(dims), max(dims)+1, 1.0))\n",
-    "ax.set_zticks(np.arange(min(dims), max(dims)+1, 1.0))\n",
-    "\n",
     "R = SO3().Rz(45, unit='deg')\n",
     "print(R)\n",
     "\n",
+    "new_plot3d()\n",
     "plot_rot3d(R, frame='R')\n"
    ]
   },
@@ -209,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -235,25 +199,10 @@
     }
    ],
    "source": [
-    "fig = plt.figure(figsize=(6,6))\n",
-    "ax = fig.add_subplot(111, projection='3d')\n",
-    "\n",
-    "dims = [-2,2]\n",
-    "ax.set_proj_type('ortho')\n",
-    "ax.set_xlim(dims)\n",
-    "ax.set_ylim(dims)\n",
-    "ax.set_zlim(dims)\n",
-    "ax.set_xlabel('X')\n",
-    "ax.set_ylabel('Y')\n",
-    "ax.set_zlabel('Z')\n",
-    "ax.grid(True)\n",
-    "ax.set_xticks(np.arange(min(dims), max(dims)+1, 1.0))\n",
-    "ax.set_yticks(np.arange(min(dims), max(dims)+1, 1.0))\n",
-    "ax.set_zticks(np.arange(min(dims), max(dims)+1, 1.0))\n",
-    "\n",
     "T = SE3()\n",
     "print(T)\n",
     "\n",
+    "new_plot3d()\n",
     "plot_pose3d(T, frame='T')"
    ]
   }
